test/compilable/imports/checkimports3c.d
module imports.checkimports3c;
void foo(string) {}
