test/fail_compilation/fail332.d
void foo(int,...) {}

void bar(){
   foo();
}

